added script for mailchimp integration

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,20 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap"
       rel="stylesheet"
     />
+    <!-- Mailchimp integration -->
+    <script id="mcjs">
+      !(function(c, h, i, m, p) {
+        (m = c.createElement(h)),
+          (p = c.getElementsByTagName(h)[0]),
+          (m.async = 1),
+          (m.src = i),
+          p.parentNode.insertBefore(m, p);
+      })(
+        document,
+        'script',
+        'https://chimpstatic.com/mcjs-connected/js/users/ba834d53a5d0e9b8d5a7cdb4c/ac20c84052a9a23d3bf25592b.js'
+      );
+    </script>
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
